--- a/popup.html
+++ b/popup.html
@@ -155,6 +155,13 @@
             cursor: pointer;
             border-radius: 5px;
         }
+        .stage-1, .stage-2{
+            width: 100%;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+        }
     </style>
     <div class="main-container">
         <div class="cancel-button" id="close-extension">
@@ -165,9 +172,16 @@
         </div>
         <p id="heroku-configurer-error-msg"></p>
         <div class="stage-1" id="stage-1">
-            
+            <div class="select-app">
+                <select id="platform-name" class="app-name">
+                    <option value="">Select Platform</option>
+                </select>
+            </div>
+            <div class="import-btn-container">
+                <button id="select-platform-btn">Continue</button>
+            </div>
         </div>
-        <div class="stage-2" id="stage-2">
+        <div class="stage-2" id="stage-2" style="display: none;">
             <div class="select-app">
                 <select id="app-name" class="app-name">
                     <option value="">Loading Apps</option>
