--- a/popup.html
+++ b/popup.html
@@ -172,6 +172,7 @@
         </div>
         <p id="heroku-configurer-error-msg"></p>
         <div class="stage-1" id="stage-1">
+            <p>Select Platform</p>
             <div class="select-app">
                 <select id="platform-name" class="app-name">
                     <option value="">Select Platform</option>
